--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/assets/icon.ico" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/logo-pegsa-circular.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pegsa Construcciones</title>
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="Pegsa Construcciones" />
-  <meta name="description" content="Brindar servicios de construcción de alta calidad, seguros y sostenibles, cumpliendo con plazos y requerimientos establecidos" />
+  <meta name="description"
+    content="Brindar servicios de construcción de alta calidad, seguros y sostenibles, cumpliendo con plazos y requerimientos establecidos" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://github.com/leoMirandaa/shadcn-landing-page.git" />
+  <meta property="og:url" content="https://www.facebook.com/profile.php?id=61581863360361" />
   <meta property="og:title" content="Pegsa Construcciones" />
-  <meta property="og:description" content="Brindar servicios de construcción de alta calidad, seguros y sostenibles, cumpliendo con plazos y requerimientos establecidos" />
+  <meta property="og:description"
+    content="Brindar servicios de construcción de alta calidad, seguros y sostenibles, cumpliendo con plazos y requerimientos establecidos" />
   <meta property="og:image"
     content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1723499276/og-images/shadcn-vue-landing.jpg" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <meta name="twitter:url" content="https://github.com/leoMirandaa/shadcn-landing-page.git" />
-  <meta name="twitter:title" content="Pegsa Construcciones" />
-  <meta name="twitter:description" content="Brindar servicios de construcción de alta calidad, seguros y sostenibles, cumpliendo con plazos y requerimientos establecidos" />
-  <meta name="twitter:image"
+  <!-- Instagram -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.instagram.com/pegsaconstrucciones" />
+  <meta property="og:title" content="Pegsa Construcciones" />
+  <meta property="og:description"
+    content="Servicios de construcción de alta calidad, seguros y sostenibles. Cumplimos con plazos y estándares de excelencia." />
+  <meta property="og:image"
     content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1723499276/og-images/shadcn-vue-landing.jpg" />
 </head>
 
